--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ input, select, button {
     border-radius: 6px;
 }
 
+input {
+    /* max-width: 650px; */
+    width: 93%;
+}
+
 button {
     background-color: #28a745;
     color: white;
